<resources>
    <string name="app_name">EasyExercise</string>

    <string name="default_web_client_id_hardcode">867339313395-lks5qqe1heeijqa0564p2ld4tlreglhc.apps.googleusercontent.com</string>
    <string name="firebase_database">https://cz2006-9c928-default-rtdb.asia-southeast1.firebasedatabase.app/</string>
    <string name="customized_location_text">Select Customized Location</string>
    <string name="another_facility_text">Select Another Facility</string>
    <string name="fragment_home_title">Home</string>
    <string name="fragment_plans_title">Plans</string>
    <string name="fragment_community_title">Community</string>
    <string name="fragment_history_title">History</string>
    <string name="fragment_me_title">Me</string>
    <string name="no_facility_message">There is no facility around you. Do you want to make a plan at a customized location?</string>
    <string name="cancel_text">Cancel</string>
    <string name="proceed_text">Proceed</string>
    <string name="home_main_message_text">Message</string>
    <string name="home_main_title_text">Title</string>
    <string name="home_main_image_description">Home image</string>
    <string name="publish_plan_text">Publish plan</string>
    <string name="customized_location">Customized location</string>
    <string name="confirm_selection_text">Confirm selection</string>
    <string name="select_facility_text">Select Facility</string>
    <string name="make_plan_text">Make a plan</string>
    <string name="add_plan_text">Add plan</string>

    <string name="check_in_text">Check in</string>
    <string name="check_out_text">Check out</string>
    <string name="another_facility_text">Another facility</string>
    <string name="customized_location_text">Customized location</string>

    <string name="stop_text">Stop</string>

    <string name="recommended_text">Recommended</string>
    <string name="all_recommendation_text">Others</string>

    <string name="sign_out_text">Sign out</string>

    <string name="start">Start</string>
    <string name="anonymous">Anonymous</string>

    <string name="sample_user_name">Moody Moody</string>
    <string name="sample_user_email">Moody4431@gmail.com</string>
    <string name="sample_user_gender">Female</string>
    <string name="sample_user_weight">60</string>
    <string name="sample_user_height">175</string>
    <string name="sample_user_bmi">19.5</string>
    <string name="click_to_set">Please click to set</string>
    <string name="sample_user_join_date">10/10/2020</string>
    <string name="sample_user_check_out_place">North Hill</string>
    <string name="sample_user_check_out_sport">swimming</string>
    <string name="sample_user_check_out_time">08/02/2020 18:18</string>
    <string name="sample_user_check_out_duration">00:32</string>
    <string name="sample_user_check_out_calories">211</string>
    <string name="title_activity_chat_room">ChatRoomActivity</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="btn_forgot_password">Forgot password?</string>
    <string name="btn_link_to_register">Have no account? Sign up here</string>
    <string name="forgot_password_msg">Send a email to reset your password</string>
    <string name="btn_reset_password">Reset</string>
    <string name="btn_back">Back</string>
    <string name="action_sign_in_short">Sign Up</string>
    <string name="btn_link_to_login">Already have an account? Login here</string>
    <string name="hint_email">Email</string>
    <string name="hint_new_email">New email</string>
    <string name="prompt_password">Password</string>
    <string name="new_pass">New password</string>
    <string name="btn_change">Change</string>
    <string name="minimum_password">min 6 digits required</string>
    <string name="auth_failed">auth failed</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="btn_sign_out">Sign out</string>

</resources>